--- a/WebShop.Admin/Views/Product/Edit.cshtml
+++ b/WebShop.Admin/Views/Product/Edit.cshtml
@@ -26,7 +26,7 @@
                         <div class="col-md-6">
                            
                                             
-                                            <select name="cat" asp-items="@ViewBag.Category"><option value="">Select a Category</option></select>
+                                            <select name="cate" asp-items="@ViewBag.Category"><option value="">Select a Category</option></select>
                                             <span asp-validation-for="Category" class="text-danger"></span>
                                         
                         </div>
