--- a/WebShop.Admin/Views/_ViewImports.cshtml
+++ b/WebShop.Admin/Views/_ViewImports.cshtml
@@ -2,6 +2,7 @@
 @using WebShop.Data.Models
 @using WebShop.Admin.Models
 @using Microsoft.AspNetCore.Identity
+@using WebShop.Admin.ViewModels.Orders
 @using WebShop.Admin.ViewModels.Product
 @using WebShop.Admin.ViewModels.Category
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
