--- a/WebShop.Admin/Views/Dashboard/Index.cshtml
+++ b/WebShop.Admin/Views/Dashboard/Index.cshtml
@@ -1,5 +1,4 @@
-﻿
-<div class="row justify-content-center pt-3">
+﻿<div class="row justify-content-center pt-3">
     <div class="col">
         <div class="card justify-content-center">
             <div class="card-header"><h1>Dashboard</h1></div>
@@ -7,11 +6,11 @@
             <div class="card-body ">
                 <div class="row border border-secondary rounded-3 mb-3 justify-content-center" style="width: 90rem; height: 150px;">
 
-                    @*<partial name="_UserCountPartial" />
+                    <partial name="_UserCountPartial" />
                     <partial name="_CategoryCountPartial" />
                     <partial name="_ProductCountPartial" />
                     <partial name="_OrderCountPartial" />
-                    <partial name="_ShiptCountPartial" />*@
+                    <partial name="_ShiptCountPartial" />
 
                 </div>
             </div>
