--- a/WebShop.Admin/Views/Role/ShowUserRoles.cshtml
+++ b/WebShop.Admin/Views/Role/ShowUserRoles.cshtml
@@ -1,12 +1,12 @@
-﻿@model IEnumerable<IdentityRole>
+﻿@model UserRoleViewModel
 
 <div class="row justify-content-center pt-3">
     <div class="col-md-8">
         <div class="card justify-content-center">
-            <div class="card-header"><h1>Role</h1></div>
+            <div class="card-header"><h1>Role for @Model.Name</h1></div>
 
             <div class="card-body ">
-                <a asp-action="Create" class="btn btn-primary">Add New</a>
+                <a asp-action="AddRoleToUser" asp-route-userid=@Model.UserId class="btn btn-primary">Add New</a>
                 <hr />
                 <table class="table table-dark table-striped">
                     <thead>
@@ -16,18 +16,12 @@
                         </tr>
                     </thead>
                     <tbody>
-                        @foreach (var item in Model)
+                        @foreach (var item in Model.Roles)
                         {
                             <tr>
-                                <td>@item.Name</td>
+                                <td>@item</td>
                                 <td>
-                                    
-                                    @if (@item.Name != "Admin" && @item.Name != "User")
-                                    {
-                                        <a asp-action="Edit" asp-route-Id="@item.Id" class="btn btn-success">Edit</a>
-                                        <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-danger">Delete</a>
-                                    }
-                                    
+                                    <a asp-action="RemoveRoleFromUser" asp-route-rolename=@item asp-route-userid=@Model.UserId class="btn btn-danger">Delete</a>
                                 </td>
                             </tr>
                         }
